tests/functional2/lang/builtins.removeAttrs/eval-fail.err.exp
error: attribute 'x' missing
       at /pwd/in.nix:4:27:
            3| in
            4| (removeAttrs attrs ["x"]).x
             |                           ^
            5|
       Did you mean y?
